[tool.poetry]
authors = ["Allen Chou <f1470891079@gmail.com>"]
description = "The general purpose LLM app stacks."
documentation = "https://dockhardman.github.io/languru/"
homepage = "https://github.com/dockhardman/languru"
license = "Apache-2.0 license"
name = "languru"
readme = "README.md"
repository = "https://github.com/dockhardman/languru"
version = "0.9.0"

[tool.poetry.dependencies]
accelerate = { version = "<1,>=0.27.2", optional = true, markers = "sys_platform == 'linux'" }
aiohttp = "^3"
anthropic = "<1,>0.21"
bitsandbytes = { version = "<1,>=0.42", optional = true, markers = "sys_platform == 'linux'" }
click = "^8"
colorama = "<1,>=0.4.6"
diskcache = "^5"
einops = { version = "<1,>=0.7.0", optional = true }
email-validator = "^2"
fastapi = { extras = ["all"], version = "<1,>=0.109.0", optional = true }
flash-attn = { version = "^2", optional = true, markers = "sys_platform == 'linux'" }
google-cloud-aiplatform = "^1.38"
google-generativeai = "<1,>=0.3.2"
groq = "<1,>=0.4.2"
huggingface-hub = { version = "<1,>=0.20.0", optional = true }
ninja = { version = "^1.11.1.1", optional = true }
nvgpu = { version = "<1,>=0.10.0", optional = true, markers = "sys_platform == 'linux'" }
openai = "^1.10.0"
packaging = ">=23"
pillow = "^10.0.0"
pyassorted = "<1,>=0.9.0"
pydantic = "^2"
pydantic-settings = "^2"
pyjson5 = "^1.6"
python = ">=3.10,<4.0"
python-dotenv = "^1"
pytz = ">=2024.1"
rich = "^13"
sentencepiece = { version = "<1,>=0.1.99", optional = true }
sqlalchemy = "^2"
torch = { version = "^2.2.0", optional = true }
torchaudio = { version = "^2.2.0", optional = true }
torchvision = { version = "<1,>=0.17.0", optional = true }
transformers = { extras = ["torch"], version = "^4.37.2", optional = true }
typing-extensions = "^4"

[tool.poetry.scripts]
languru = "languru.cli.main:app"

[tool.poetry.extras]
all = ["accelerate", "bitsandbytes", "einops", "fastapi", "huggingface-hub", "ninja", "ninja", "nvgpu", "sentencepiece", "torch", "torchaudio", "torchvision", "transformers"]
cpu = ["huggingface-hub", "torch", "torchaudio", "torchvision", "transformers"]
gpu = ["accelerate", "bitsandbytes", "einops", "huggingface-hub", "ninja", "nvgpu", "sentencepiece", "torch", "torchaudio", "torchvision", "transformers"]
server = ["fastapi"]

[tool.poetry.group.docs.dependencies]
mkdocs-git-authors-plugin = "*"
mkdocs-git-committers-plugin-2 = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-material = "^9"
mkdocs-minify-plugin = "*"
mkdocs-nav-weight = "*"
mkdocs-redirects = "*"
mkdocs-render-swagger-plugin = "*"
neoteroi-mkdocs = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
poetry-plugin-export = "^1.6.0"
pytest = "^8"
pytest-asyncio = "*"
pytest-cov = "^4"
pytest-xdist = "^3"
setuptools = ">=69"


[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
